Adds whitelist and inappbrowser to get app working again with updated cordova platform libs

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://wakatime.com ws://localhost:35729 data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *;script-src 'self' localhost:35729 'unsafe-eval' 'unsafe-inline';">
+    <title>WakaTime</title>
 
 
     <!-- compiled css output -->
